# enterprise-ai-agent-reference

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
.local/: aws-dev.example.json
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: __init__.py  incident_support.py
apps/api/app/answers/: __init__.py  composer.py  prompting.py  providers.py
apps/api/app/audit/: __init__.py  events.py
apps/api/app/db/: __init__.py  connection.py  schema.sql  settings.py
apps/api/app/evals/: __init__.py  answer_eval.py  retrieval_eval.py  workflow_eval.py
apps/api/app/guardrails/: __init__.py  input_checks.py
apps/api/app/mcp_bridge/: __init__.py  client.py
apps/api/app/observability/: __init__.py  costs.py  model_calls.py
apps/api/app/rag/: __init__.py  chunking.py  documents.py  embeddings.py  modes.py  pgvector_store.py  retrieval.py
apps/api/tests/: test_answer_eval.py  test_answer_providers.py  test_answers.py  test_audit.py  test_aws_cli_safety.py  test_aws_deployment_safety.py  test_embeddings.py  test_guardrails.py  test_health.py  test_incident_support_agent.py  test_mcp_bridge.py  test_model_observability.py  test_pgvector.py  test_rag.py  test_retrieval_eval.py  test_workflow_eval.py
datasets/: golden_eval_set.jsonl  workflow_eval_set.jsonl
docs/: architecture.md  aws-cli-operations.md  aws-deployment.md  demo-scenario.md  eval-design.md  security-guardrails.md
mcp/policy_server/: pyproject.toml  server.py
mcp/policy_server/tests/: test_policy_server.py
scripts/: aws_preflight.ps1  check.ps1  (+20 more)
(+41 files in other folders)
