[project]
name = "enterprise-ai-agent-reference-api"
version = "0.1.0"
description = "FastAPI backend for the enterprise AI agent reference stack."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "mcp[cli]>=1.0.0",
    "openai>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
