[project]
name = "enterprise-ai-agent-reference-policy-server"
version = "0.1.0"
description = "Synthetic policy helper functions for the enterprise AI agent reference stack."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
